# pregnancy-tracking-API

./: .env-example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/application/: urls.py
app/application/serializers/: base_serializer.py  user_serializer.py
app/application/views/: user_views.py
app/core/: settings.py  urls.py
app/domain/entities/: base_entity.py  user_entity.py
app/domain/exceptions/: database_exceptions.py
app/domain/services/: user_service.py
