[tool.poetry]
name = "pregnancy-tracking-api"
version = "0.1.0"
description = "An API that offers support for pregnancy monitoring, providing information about milestones of fetal development, prenatal and postnatal care, among other aspects related to pregnancy."
authors = ["Sigmages"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"
markdown = "^3.5.1"
django-filter = "^23.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
unimport = "^1.1.0"
isort = "^5.13.2"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
